@@ -1,50 +1,44 @@
-import com.example.Animal;
 import com.example.Feline;
 import com.example.Lion;
 import org.junit.Assert;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.mockito.Mock;
 import org.mockito.Mockito;
+import org.mockito.Spy;
 import org.mockito.junit.MockitoJUnitRunner;
 
+import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.*;
 
 @RunWith(MockitoJUnitRunner.class)
 public class LionTest {
-    @Mock
-    Feline feline;
+
+    @Spy
+    private Feline feline = new Feline();
 
     @Test
-    public void getKittensLionReturn1() throws Exception{
-        Lion lion = new Lion("Самка", feline);
-        int result = 1;
-        Mockito.when(lion.getKittens()).thenReturn(1);
-        Assert.assertEquals(lion.getKittens(), result);
+    public void getKittensReturnsValidCount() throws Exception {
+        Lion lion = new Lion("Самец", feline);
+        Mockito.when(feline.getKittens()).thenReturn(1);
+        int expectedResult = 1;
+        assertEquals("getKittens вернуть верое число", expectedResult, lion.getKittens());
     }
-    @Mock
-    Animal animal;
 
     @Test
-    public void lionEatsMeatTrue() throws Exception{
-        Mockito.when(animal.getFood("Хищник")).thenReturn(List.of("Животные", "Птицы", "Рыба"));
-        List actualResult = animal.getFood("Хищник");
-        List expectedResult = List.of("Животные", "Птицы", "Рыба");
-        Assert.assertEquals(actualResult, expectedResult);
+    public void getFoodReturnsValidList() throws Exception {
+        Lion lion = new Lion("Самец", feline);
+        Mockito.when(feline.getFood("Хищник")).thenReturn(Arrays.asList("Животные", "Птицы", "Рыба"));
+        List<String> expectedResult = Arrays.asList("Животные", "Птицы", "Рыба");
+        assertEquals("getFood должен вернуть список питания", expectedResult, lion.getFood());
     }
-
-    @Mock
-    Lion lion;
 
     @Test
-    public void countLionIsOne1() {
-        Mockito.when(lion.getKittens()).thenReturn(1);
-        int expectedLionCount = 1;
-        int actualLionCount = lion.getKittens();
-        assertEquals(expectedLionCount, actualLionCount);
+    public void constructorThrowsExceptionOnUnsupportedSex() {
+        Exception exception = Assert.assertThrows(Exception.class, () -> {
+            Lion lion = new Lion("Ошибочный", feline);
+        });
+        assertEquals("Используйте допустимые значения пола животного - самец или самка", exception.getMessage());
     }
-
-
 }
